tests/snapshots/query_execution_snapshots__aggregation_query_error.snap
---
source: tests/query_execution_snapshots.rs
expression: error_info
---
"Aggregation query error: File not found: test_data/small_orders.csv"
