tests/snapshots/query_execution_snapshots__comprehensive_query_error.snap
---
source: tests/query_execution_snapshots.rs
expression: error_info
---
"Comprehensive query error: File not found: test_data/small_customers.csv"
