tests/snapshots/query_execution_snapshots__error_missing_file_validation.snap
---
source: tests/query_execution_snapshots.rs
expression: validation_results
---
- - customers
  - false
  - file_not_found
- - orders
  - true
  - success
